# midi

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: bytereader.rs  errors.rs  events.rs  lib.rs  messages.rs  metadata.rs  metaevents.rs  midi_error.rs  note.rs  track.rs
src/messages/: channel_pressure.rs  control_change.rs  note_off.rs  note_on.rs  pitch_bend_change.rs  polyphonic_key_pressure.rs  program_change.rs
src/metaevents/: copyright_notice.rs  cue_point.rs  end_of_track.rs  instrument_name.rs  key_signature.rs  lyric.rs  marker.rs  midi_channel_prefix.rs  midi_port.rs  sequence_number.rs  sequencer_specific.rs  set_tempo.rs  smpte_offset.rs  text.rs  time_signature.rs  track_name.rs
src/midi/: mod.rs
src/midi/file_header/: division.rs  mod.rs
tests/: ingetration_tests.rs
