[package]
name = "midi"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Gagnon"]

[dependencies]
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.17"
serde = { version = "1.0.163", features = ["derive"], optional = true}
serde_json = { version = "1.0.96", optional = true}

[features]
json = ["serde", "serde_json"]

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.17"
